# ROS2-Autonomous-Robot-Project

./: .gitignore  README.md
src/car_model/: CMakeLists.txt  package.xml
src/car_model/config/: controllers.yaml  nav2_params.yaml
src/car_model/launch/: display.launch.py  gazebo.launch.py  gesture_mission.launch.py  my_world.launch.py  navigation.launch.py  run_mission.launch.py  voice_mission.launch.py
src/car_model/maps/: class_map.pgm  class_map.yaml  jessie_world.pgm  jessie_world.yaml
src/car_model/meshes/: base_link.STL  camera.STL  front_wheel.STL  link1.STL  link2.STL  link3.STL  paw1.STL  paw2.STL  radar.STL  wheel1.STL  wheel2.STL
src/car_model/scripts/: gesture_control.py  manual_grasp_task.py  mission_controller.py  vision_detector.py  vision_detector_auto.py  voice_control.py
src/car_model/src/: arm_driver.cpp  arm_release.cpp
src/car_model/urdf/: car_model.xacro
src/car_model/worlds/: jessie_world.world  me332_final_project_6_0_classic.world  my_world.world
src/car_model_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/car_model_moveit_config/config/: car_model.ros2_control.xacro  car_model.srdf  car_model.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
src/car_model_moveit_config/launch/: demo.launch.py  demo_gazebo.launch.py  grasp_demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
