<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>car_model</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for car_model</p>
    <p>This package contains configuration data, 3D models and launch files for car_moedl</p>
  </description>
  <author>Jessie</author>
  <maintainer email="Jessie@email.com">TODO</maintainer>
  <license>BSD</license>


  <buildtool_depend>ament_cmake</buildtool_depend>


  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_visual_tools</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>    
  <depend>std_srvs</depend>

  
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
